# exercises

./: .gitignore  .gitmodules  snieg.css  snieg.html  snieg.js  test.cpp
1024/: 1024.css  1024.html  1024.js
CV/: mateusz_starzycki.tex
Darts/: algorithm.txt  round.css  round.html  round.js
IO/VIII/antypier/: main.cpp
IO/VIII/przedzialy/: main.cpp
IO/onezeros/: main.cpp  oldmain2  test.py
IO/trees/: in2  in4  in5  main.cpp
OIG/1/bajtocja/: main.cpp
OIG/1/bankiet/: main.cpp
OIG/1/bierki/: main.cpp
OIG/1/sortowanie/: main.cpp
OIG/1/sumujacyj/: main.cpp
OIG/1/zliczacz/: main.cpp
OIG/1/zwyciezcy/: main.cpp
PA/2001/potega/: main.cpp
PA/2001/silnia/: main.cpp
PA/2001/wagabin/: main.cpp
Snow/: snieg.css.orig  snieg.css.rej  snieg.html  snieg.js
aes-128/: main.c
algorithms/astar/: in  main.cpp
algorithms/fib/: main.cpp
codechef/august2015/: ambig.cpp  atm.cpp  chefandway.cpp  cielandrec.cpp  cuttingrec.cpp  divider.cpp  factorial.cpp  factorial2.cpp  inputs.cpp  reverse.cpp  snapeladd.cpp  sort.cpp  sumsintriangle.c  thelead.cpp  transform.cpp  universe.cpp
codechef/december2015/: double.cpp  head.cpp  same.cpp  sum_dig.cpp
codechef/november2015/: gift.cpp  holes.cpp  marbles.cpp
codechef/october2015/: add.cpp  coins.cpp  digsum.cpp  div.cpp  four.cpp  marbles.cpp  primes.cpp  tweets.cpp
codechef/september2015/: asdf.js  chefandrem.cpp  minpair.cpp  threewaycom.cpp
codejam/: main.c
codejam/cheatbooltree/: main.cpp
codejam/cookies/: in  main.cpp  out
codejam/croptriangles/: main.c
codejam/flights/: in  main.cpp
codejam/lotery/: main.cpp
codejam/magician/: in  in2  main.cpp
codejam/minesweeper/: in  in3  main.cpp  out
codejam/mousetrap/: main.c
codejam/multibase/: in  main.cpp
codejam/mushroommonster/: main.cpp
codejam/numbersets/: in  main.c  out_2  test  test.cpp
codejam/partelf/: main.cpp  out
codejam/textmessagingoutrage/: main.c
codejam/therepeater/: in  main.cpp  out
codejam/traincars/: a.out  out
csr/: out
curses/2048/: main.cpp
game/: Makefile  main.cpp  main.h
interviews/audio_analyze/: solution.cpp
interviews/csr/: in
interviews/csr/1/: main.c
interviews/sort/: blah  main.cpp  test
interviews/sort2/: blah2  blah3  main.cpp  test1  test3  test_bin
interviews/thinkcell/: main (2).cpp  main.cpp
mapgen/: CMakeLists.txt  main.cpp
montecarlo/circle/: main.py
nodejs/javascripting/arrays/: arrays.js
nodejs/javascripting/arrays-filtering/: arrays-filtering.js
nodejs/javascripting/forloops/: forloops.js
nodejs/javascripting/functions-args/: main.js
nodejs/javascripting/introduction/: introduction.js
nodejs/javascripting/looping/: main.js
nodejs/javascripting/number-to-string/: number-to-string.js
nodejs/javascripting/object_props/: main.js
nodejs/javascripting/objects/: main.js
nodejs/learnyounode/: fileserver.js  httpcl.js  mod.js  tcpserver.js  test.js  test2.js  test3.js  test4.js  upperserver.js
opengl/1/: main.cpp
project_euler/1/: main.cpp  main.py  main2.cpp  main2.py
project_euler/10/: main.py
project_euler/12/: main.py
project_euler/13/: main.py
project_euler/14/: main.py
project_euler/15/: main.py
project_euler/16/: main.py
project_euler/17/: blah  main.py
project_euler/18/: main.py
project_euler/19/: main.cpp
project_euler/2/: main.cpp  main.py
project_euler/20/: solve.py
project_euler/204/: main.cpp
project_euler/21/: main.py
project_euler/22/: main.py
project_euler/23/: main.py
project_euler/24/: main.cpp
project_euler/25/: solve.py
project_euler/26/: main.py
project_euler/3/: main.cpp  main.py
project_euler/31/: main.cpp
project_euler/4/: main.cpp  main.py
project_euler/48/: main.cpp
project_euler/49/: main.py
project_euler/50/: main.cpp
project_euler/6/: main.py
project_euler/64/: main.py
project_euler/7/: main.py
project_euler/8/: main.py
project_euler/9/: main.py
pythonala/: ala.py
studia/bazy/: schema.sql  sprawko.tex
studia/codejam/dijkstra/: main.cpp
studia/intel/: README  hmmtest.in  hmmtest.out  hmmtest.res  propagation.mat  tester.py  viterbi.cpp
studia/inzwym/: zadania1.tex
studia/klastryigridy/: stormmq.tex
studia/mars/: CMakeLists.txt
studia/matematykadyskretna/: m_dyskretna.tex  m_dyskretna2.tex
studia/optymalizacja/: zadania1.tex  zadania2.tex
studia/progrow/: openmp.cpp  sequential.cpp
studia/zaawansowanec/: .ycm_extra_conf.py  CMakeLists.txt
studia/zaawansowanec/src/: address.cpp  address.hpp  command.hpp  comment.hpp  instruction.cpp  instruction.hpp  loader.cpp  loader.hpp  main.cpp  memory.cpp  memory.hpp  process.cpp  process.hpp  program.cpp  program.hpp  scheduler.cpp  scheduler.hpp
studia/zaawansowanec/src/addresses/: address.hpp
studia/zaawansowanec/test/: main.cpp
studia/zaawansowanec/warriors/: .testwarrior1.redcode.swp
sudoku/: in  in2  main.c
tests/final/: main.cpp
tests/general/: main.cpp
zbiory/: iloczyn.cpp
(+84 files in other folders)
