CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/scripts/")

PROJECT(mapgen)

IF(NOT WIN32)
  SET(CMAKE_CXX_FLAGS "-std=c++11 -g")
ENDIF()


FIND_PACKAGE( Boost COMPONENTS system filesystem log date_time random REQUIRED)
FIND_PACKAGE( JPEG )
FIND_PACKAGE( Cairo )
FIND_PACKAGE( PNG )
IF(NOT CAIRO_FOUND)
  MESSAGE(FATAL_ERROR "Cairo NOT FOUND!")
ENDIF(NOT CAIRO_FOUND)
IF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "BOOST NOT FOUND!")
ENDIF(NOT Boost_FOUND)
IF(NOT JPEG_FOUND)
  MESSAGE(FATAL_ERROR "JPG NOT FOUND!")
ENDIF(NOT JPEG_FOUND)
IF(NOT PNG_FOUND)
  MESSAGE(FATAL_ERROR "PNG NOT FOUND!")
ENDIF(NOT PNG_FOUND)

INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}" "${CAIRO_INCLUDE_DIRS}")

ADD_EXECUTABLE(mapgen main.cpp)
TARGET_LINK_LIBRARIES(mapgen ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${Boost_LIBRARIES} ${CAIRO_LIBRARIES})

