CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MARS)

SET(CMAKE_CXX_FLAGS "-std=c++11")

FIND_PACKAGE(Boost REQUIRED) 

FIND_PACKAGE(Qt5 COMPONENTS OpenGL Widgets Core Gui Quick)
SET(CMAKE_AUTOMOC ON)

# Include GTest
ADD_SUBDIRECTORY("googletest")
SET(GTEST_INCLUDE_DIR "${gtest_SOURCE_DIR}/include")
SET(GTEST_LIBRARIES "gtest")
INCLUDE_DIRECTORIES("${GTEST_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")

#Import the testable files
FILE(GLOB_RECURSE TESTABLE_SOURCES "src/*.cpp")

#add the test file for each testable source, also add them to source list exclude files named "main.cpp"
FOREACH(SOURCE_FILE IN LISTS TESTABLE_SOURCES)
  GET_FILENAME_COMPONENT(SOURCE_FILE_EXT ${SOURCE_FILE} EXT)
  IF("${SOURCE_FILE_EXT}" STREQUAL ".cpp")
    GET_FILENAME_COMPONENT(FILE_NAME ${SOURCE_FILE} NAME_WE)
    GET_FILENAME_COMPONENT(FILE_DIR ${SOURCE_FILE} DIRECTORY)
    STRING(REGEX REPLACE "src" "test" FILE_DIR ${FILE_DIR})
    #exclude all main files.
    IF(NOT "${FILE_NAME}" STREQUAL "main")
      LIST(APPEND TEST_SOURCES "${FILE_DIR}/${FILE_NAME}.test.cpp")
        MESSAGE(STATUS "SOURCE FILE ADDED: ${SOURCE_FILE}")
      ENDIF()
    ENDIF()
ENDFOREACH()

#build the mars 
ADD_EXECUTABLE(mars src/main.cpp  ${TESTABLE_SOURCES} ${MOCFILES})
#QT5_USE_MODULES(sensation_editor Widgets OpenGL Core Gui Quick)
TARGET_LINK_LIBRARIES(mars ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${Boost_LIBRARIES})

INCLUDE_DIRECTORIES("src")

INCLUDE_DIRECTORIES("test")
#build tests
ADD_EXECUTABLE(marstest test/main.cpp ${TEST_SOURCES} ${MOCFILES})
#QT5_USE_MODULES(editor_unittest  Widgets OpenGL Core Gui Quick)
TARGET_LINK_LIBRARIES(marstest ${GTEST_LIBRARIES} ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${Boost_LIBRARIES})

FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/warriors/" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/warriors")
